adjustment in the corsConfiguration and Acess control by role, by route